--- a/modulo2/settimana3/WeekProject/scss/partials/_cards.scss
+++ b/modulo2/settimana3/WeekProject/scss/partials/_cards.scss
@@ -14,20 +14,21 @@
 }
 
 .photo-container {
-	position: absolute;
-	left: -2.5em;
+	text-align: center;
+	
 	display: grid;
 	grid-template-rows: 1fr;
-	width: 100%;
-	height: 100%;
+	
+	
 	border-radius: 6px;
 	box-shadow: 4px 4px 25px -2px rgba(0, 0, 0, 0.3);
 }
 
 .photo-main {
+	max-width: 150%;
 	border-radius: 6px 6px 0 0;
-	background-color: #9be010;
-	background: radial-gradient(#e5f89e, #96e001);
+	background-color: #4f584d;
+	background: radial-gradient(#e5f89e, #787a73);
 
 	.controls {
 		display: flex;
@@ -44,7 +45,7 @@
 		position: relative;
 		left: -3.5em;
 		top: 0.5em;
-		max-width: 110%;
+		max-width: 50%;
 		filter: saturate(150%) contrast(120%) hue-rotate(10deg)
 			drop-shadow(1px 20px 10px rgba(0, 0, 0, 0.3));
 	}
