--- a/modulo2/settimana3/WeekProject/scss/partials/_reset.scss
+++ b/modulo2/settimana3/WeekProject/scss/partials/_reset.scss
@@ -18,7 +18,7 @@ body {
 	display: grid;
 	grid-template-rows: 1fr;
 	font-family: "Raleway", sans-serif;
-	background-color: #01e37f;
+	background-color: #5f4159;
 }
 
 h3 {
