Aggiunta Commenti e pulizia del codice

--- a/modulo2/settimana3/WeekProject/scss/partials/_cards.scss
+++ b/modulo2/settimana3/WeekProject/scss/partials/_cards.scss
@@ -71,7 +71,7 @@
 	}
 }
 
-/* ----- Informations Section ----- */
+/* ----- Photo Informations Section ----- */
 .product__info {
 	padding: 0.8em 0;
 }
