--- a/modulo3/settimana2/progetto1/src/app/app.component.html
+++ b/modulo3/settimana2/progetto1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- FILE HTML SU CUI SCRIVERE -->
 
-<div class="container bg-black text-light">
+<div class="container bg-black">
 
     <app-component1></app-component1>
 
