--- a/modulo3/settimana2/giorno2/progetto2/src/app/navbar/navbar.component.html
+++ b/modulo3/settimana2/giorno2/progetto2/src/app/navbar/navbar.component.html
@@ -7,12 +7,12 @@
           <a class="nav-link" [class.active]="Home()" aria-current="page" [routerLink]="['/']">Home</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" [class.active]="ActivePage()" [routerLink]="['/active']">Active
+          <a class="nav-link" [class.active]="ActivePage()" [routerLink]="['/active-posts']">Active
               Posts
           </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" [class.active]="InactivePage()" [routerLink]="['/inactive']">Inactive
+          <a class="nav-link" [class.active]="InactivePage()" [routerLink]="['/inactive-posts']">Inactive
               Posts
           </a>
       </li>
