--- a/modulo3/settimana2/giorno2/progetto2/src/app/pages/home/home.component.html
+++ b/modulo3/settimana2/giorno2/progetto2/src/app/pages/home/home.component.html
@@ -7,10 +7,10 @@
           <button class="btn btn-success" [routerLink]="['/']">Home</button>
         </li>
         <li class="nav-item">
-          <button class="btn btn-danger" [routerLink]="['/active']">Post attivi</button>
+          <button class="btn btn-danger" [routerLink]="['/active-posts']">Post attivi</button>
         </li>
         <li class="nav-item">
-          <button class="btn btn-danger" [routerLink]="['/inactive']">Post Inattivi</button>
+          <button class="btn btn-danger" [routerLink]="['/inactive-posts']">Post Inattivi</button>
         </li>
       </ul>
     </div>
