ulteriori update per migliorare il codice

--- a/modulo3/settimana2/WeekProject/appWP/src/app/app.component.html
+++ b/modulo3/settimana2/WeekProject/appWP/src/app/app.component.html
@@ -1,6 +1,10 @@
-<h1>Todo App</h1>
-<nav>
-  <a routerLink="/">Todo</a>
-  <a routerLink="/completed">Completati</a>
-</nav>
-<router-outlet></router-outlet>
+<div class="container">
+  <h1>My Todo App</h1>
+  <nav>
+      <li><a routerLink="/">Todo</a></li>
+      <li><a routerLink="/completed">Completed</a></li>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
+
+
