--- a/modulo3/settimana2/WeekProject/appWP/src/app/pages/completati/completati.component.html
+++ b/modulo3/settimana2/WeekProject/appWP/src/app/pages/completati/completati.component.html
@@ -1,8 +1,17 @@
-<h2>Completati</h2>
-
-<ul>
-  <li *ngFor="let todo of todos">
-    {{ todo.title }}
-  </li>
-</ul>
-
+<div class="container">
+  <h1>Completed</h1>
+  <div class="loading" *ngIf="isLoading">
+    Task in caricamento...
+  </div>
+  <div class="card-container">
+    <div class="card" *ngFor="let todo of todos">
+      <div class="card-header">
+        <h2>{{ todo.title }}</h2>
+      </div>
+      <div class="card-body">
+        <p>{{ todo.img }}</p>
+        <button (click)="removeTodoById(todo.id)">Remove</button>
+      </div>
+    </div>
+  </div>
+</div>
