--- a/modulo3/settimana2/WeekProject/appWP/src/app/pages/completati/completati.component.scss
+++ b/modulo3/settimana2/WeekProject/appWP/src/app/pages/completati/completati.component.scss
@@ -6,6 +6,7 @@
 }
 
 h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 36px;
   margin-bottom: 20px;
 }
@@ -17,6 +18,7 @@ h1 {
 }
 
 .card {
+  background-color: #918c8c;
   width: 300px;
   margin: 10px;
   padding: 10px;
