--- a/modulo3/settimana2/WeekProject/appWP/src/app/pages/todo/todo.component.scss
+++ b/modulo3/settimana2/WeekProject/appWP/src/app/pages/todo/todo.component.scss
@@ -5,7 +5,9 @@
   margin-top: 50px;
 }
 
+
 h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 36px;
   margin-bottom: 20px;
 }
@@ -17,6 +19,7 @@ h1 {
 }
 
 .card {
+  background-color: #918c8c;
   width: 300px;
   margin: 10px;
   padding: 10px;
