introduzione navbar e debug reindirizzamento dopo il login

--- a/modulo3/settimana3/weekProject/app/src/app/pages/auth/register/register.component.html
+++ b/modulo3/settimana3/weekProject/app/src/app/pages/auth/register/register.component.html
@@ -79,7 +79,8 @@
             This field is required.
           </p>
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!f.valid">
+        <button type="submit" class="btn btn-primary" [disabled]="!f.valid"
+         [routerLink]="['/pages', 'dashboard']">
           Submit
         </button>
       </form>
