--- a/modulo3/settimana3/weekProject/app/src/styles.scss
+++ b/modulo3/settimana3/weekProject/app/src/styles.scss
@@ -2,3 +2,8 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+body {
+  background-color: rgb(34, 34, 34);
+  color: white;
+}
