--- a/modulo3/settimana3/giorno4/appD4/src/app/auth/login/login.component.html
+++ b/modulo3/settimana3/giorno4/appD4/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- <form>
+<form>
 
   <input class="form-control" type="email" placeholder="email"
   name="email" [(ngModel)]="data.email">
@@ -12,4 +12,4 @@
   >Login</button>
 
 
-</form> -->
+</form>
