--- a/modulo3/settimana3/giorno4/appD4/src/app/auth/register/register.component.html
+++ b/modulo3/settimana3/giorno4/appD4/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<!-- <form>
+<form>
 
   <input class="form-control" type="email" placeholder="email"
   name="email" [(ngModel)]="data.email">
@@ -18,4 +18,4 @@
   >Registrati</button>
 
 
-</form> -->
+</form>
